# theo-boilerplate-fastapi

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  theo.yaml  turbo.json
apps/api/: Dockerfile.dev  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/app/core/: __init__.py
apps/api/app/models/: __init__.py  user.py
apps/api/app/routers/: __init__.py  health.py  users.py
apps/api/app/services/: __init__.py  user.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css
